--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="0; url=https://example.com">
     <title>Redirecting...</title>
     <script>
-        window.location.href = "hayson.me";
+        window.location.href = "My_Website";
     </script>
 </head>
 <body>
