--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://example.com">
+    <meta http-equiv="refresh" content="0; url=http://hayson.me/My_Website/">
     <title>Redirecting...</title>
     <script>
-        window.location.href = "My_Website";
+        window.location.href = "http://hayson.me/My_Website/"
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://example.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="http://hayson.me/My_Website/">click here</a>.</p>
 </body>
 </html>
